<resources>
    <string name="app_name">DrawStuff</string>
    <string name="About">About</string>
    <string name="InfoD">


  <![CDATA[
<br>

    The game is place specific to Malmö Universitys building <i>"Niagara"</i>.<br>
    <br>
    The concept includes the use of second screens, where the game is displayed on a public screen
    while the players play the game on their smartphones.<br>
    <br>


 <b>How to play</b><br>

    <br>
     &#8226; Each game will last for 60 seconds.<br>
     <br>

   &#8226; The player can either choose to be a <i>painter</i> or a <i>guesser.</i> <br>
   <br>
   &#8226; As a painter, the player will get a word to draw.<br>
    <br>
    &#8226; As soon as the painter has begun drawing, the guessers can start guessing.<br>
    <br>
    &#8226; The guessers can also communicate with each other in the chat during the game.
    ]]>
    </string>

    <string name="AboutFragmentText">

        <![CDATA[<b>About</b><br>
        This is a university project by Malmö Högskola.<br>
        For more information visit <br>
        https://github.com/TimFra/IDKProject_MID2_PFID3. <br>
        <br>
        <br>
        <b>Credits</b> <br>
        Thanks to Ossama Alami who shared https://github.com/firebase/AndroidChat. <br>
        Thanks to Jenny Tong who shared her https://github.com/firebase/AndroidDrawing.<br>
        <br>
        <b>Copyright 2015 MAH</b> <br>
        <b>IDK14 Team 4</b>
        <br>
        Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at
        <br><br>
        http://www.apache.org/licenses/LICENSE-2.0
        <br><br>
        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
        ]]>
    </string>



    <string name="action_settings">Settings</string>
    <string name="drawBtn">Draw</string>
    <string name="guessBtn">Guess</string>
    <string name="doneBtn">Done</string>
    <string name="win">Winner is:</string>
    <string name="loser">Loser is:</string>

    <!--login screen-->
    <string name="pickUserName">Pick a user name</string>

    <!--category screen-->
    <string name="animalBtn">Animals</string>
    <string name="natureBtn">Nature</string>
    <string name="vehiclesBtn">Vehicles</string>
    <string name="foodBtn">Food</string>
    <string name="clothingBtn">Clothing</string>
    <string name="sportsBtn">Sports</string>
    <string name="devicesBtn">Devices</string>
    <string name="toolsBtn">Tools</string>
    <string name="bodyBtn">Body</string>
    <string name="furnitureBtn">Furniture</string>
    <string name="logosBtn">Logos</string>
    <string name="verbsBtn">Verbs</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enterUsernameString">Enter Username Here</string>
    <string name="ReturnToMainMenu">Return to main menu</string>
    <string name="ClickHereToDraw">Click here to draw</string>
    <string name="HowToPlay">How to Play</string>
    <string name="AboutString">About</string>
    <string name="loginUserNameHint">Username</string>
    <string name="ClickToSendString">Click to Send Here</string>


</resources>
