<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_blue">

    <!--word category buttons-->

    <Button
        android:background="@drawable/button_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/animalBtn"
        android:textColor="@android:color/white"
        android:layout_marginBottom="140dp"
        android:textSize="@dimen/button_style2"
        android:layout_marginStart="50dp"
        android:textAlignment="center"
        android:layout_marginTop="40dp"
        android:text="@string/animalBtn"/>

    <Button
        android:background="@drawable/button_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/natureBtn"
        android:textColor="@android:color/white"
        android:textSize="@dimen/button_style2"
        android:textAlignment="center"
        android:layout_alignTop="@+id/animalBtn"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="53dp"
        android:text="@string/natureBtn"/>

    <Button
        android:background="@drawable/button_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/foodBtn"
        android:textColor="@android:color/white"
        android:textSize="@dimen/button_style2"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/foodBtn"
        android:layout_below="@+id/natureBtn"
        android:layout_alignStart="@+id/animalBtn" />

    <Button
        android:background="@drawable/button_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toolsBtn"
        android:textColor="@android:color/white"
        android:textSize="@dimen/button_style2"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/toolsBtn"
        android:layout_alignTop="@+id/foodBtn"
        android:layout_alignStart="@+id/natureBtn" />

    <Button
        android:background="@drawable/button_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/devicesBtn"
        android:textColor="@android:color/white"
        android:textSize="@dimen/button_style2"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/devicesBtn"
        android:layout_below="@+id/foodBtn"
        android:layout_alignStart="@+id/foodBtn"
        android:layout_marginTop="30dp" />

    <Button
        android:background="@drawable/button_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/furnitureBtn"
        android:textColor="@android:color/white"
        android:textSize="@dimen/button_style2"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/furnitureBtn"
        android:layout_alignTop="@+id/devicesBtn"
        android:layout_alignStart="@+id/toolsBtn" />

    <Button
        android:background="@drawable/button_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/clothingBtn"
        android:textColor="@android:color/white"
        android:textSize="@dimen/button_style2"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/clothingBtn"
        android:layout_below="@+id/devicesBtn"
        android:layout_alignStart="@+id/devicesBtn"
        android:layout_marginTop="30dp" />

    <Button
        android:background="@drawable/button_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bodyBtn"
        android:textColor="@android:color/white"
        android:textSize="@dimen/button_style2"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/bodyBtn"
        android:layout_alignTop="@+id/clothingBtn"
        android:layout_alignEnd="@+id/furnitureBtn" />

    <Button
        android:background="@drawable/button_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vehiclesBtn"
        android:textColor="@android:color/white"
        android:textSize="@dimen/button_style2"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/vehiclesBtn"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/clothingBtn"
        android:layout_alignStart="@+id/clothingBtn" />

    <Button
        android:background="@drawable/button_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sportsBtn"
        android:textColor="@android:color/white"
        android:textSize="@dimen/button_style2"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/sportsBtn"
        android:layout_alignTop="@+id/vehiclesBtn"
        android:layout_alignStart="@+id/bodyBtn" />

    <Button
        android:background="@drawable/button_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logosBtn"
        android:textColor="@android:color/white"
        android:textSize="@dimen/button_style2"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/logosBtn"
        android:layout_below="@+id/vehiclesBtn"
        android:layout_alignStart="@+id/vehiclesBtn"
        android:layout_marginTop="30dp" />

    <Button
        android:background="@drawable/button_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/verbsBtn"
        android:textColor="@android:color/white"
        android:textSize="@dimen/button_style2"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/verbsBtn"
        android:layout_alignTop="@+id/logosBtn"
        android:layout_alignStart="@+id/sportsBtn" />


</RelativeLayout>